# KolSol

./: .gitignore  .pypirc  LICENSE  README.md  generate.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_publish.yaml  linting.yml
kolsol/: __init__.py
kolsol/base/: base_solver.py
kolsol/numpy/: solver.py
kolsol/torch/: solver.py
kolsol/utils/: enums.py  integrate.py  types.py
