[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kolsol"
version = "0.1.0"
description = "Pseudospectral Kolmogorov Flow Solver"

authors = ["danielkelshaw <daniel.j.kelshaw@gmail.com>"]

readme = "README.md"

license = "MIT"

repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/magrilab/kolsol"

classifiers = ["License :: OSI Approved :: MIT License"]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.19.5"
einops = "^0.3.2"
opt-einsum = "^3.3.0"
torch = "^1.9.0"
tqdm = "^4.62.3"
h5py = "^3.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.13.9"
pytest = "^7.0.1"

[tool.mypy]
python_version = 3.6
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

