[build-system]
 requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"

[project]
name = "kolsol"
authors = [{name = "Daniel Kelshaw", email = "daniel.j.kelshaw@gmail.com"}]
description = "Kolmogorov Flow Solver"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
# which version of python to require
requires-python = ">=3.8.10"
# version and description inferred from top-level __init__.py
dynamic = ["version", "description"] 
dependencies = [
     "numpy",
     "einops",
     "opt_einsum",
     "torch",
     "tqdm",
     "h5py"
 ]	

[project.urls]
Home = "https://github.com/magrilab/kolsol"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "pytest"
]

[tool.mypy]
python_version = 3.8
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.design]
max-line-length = 120
min-public-methods = 1
max-args = 10

[tool.pylint.typecheck]
ignored-modules = [
  'torch'
]

[tool.pylint.message_control]
disable = [
  'missing-module-docstring',
  'missing-class-docstring',
  'invalid-name'
]

